This is new change.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
-[files]
-packages =
-    RaxTempestPlugin
+[metadata]
+name = flex_tempest_plugin
+summary = OpenStack host evacuation tempest tests.
+long_description = file: README.rst
+author = Rackspace
+python_requires = >=3.9
 
 [entry_points]
 tempest.test_plugins =
